--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,15 @@
     package="com.example.myapplication">
 
     <application
+
+        android:theme="@style/Theme.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
-        <activity android:name=".UpdateActivity"></activity>
-        <activity android:name=".ListActivity" />
+        android:supportsRtl="true">
+        <activity android:name=".UpdateActivity"/>
         <activity android:name=".RegisterActivity" />
-        <activity
-            android:name=".ui.login.RegisterActivity"
-            android:label="@string/title_activity_register" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,3 +22,6 @@
     </application>
 
 </manifest>
+
+
+<!--    android:theme="@style/Theme.MyApplication"-->
